--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -94,6 +94,7 @@ it:
   search placeholder: "Ricerca..."
   search: "Cerca"
   book: "Libro"
+  filter book: "Filtro Libri..."
   try the beta: "Prova la Beta"
   welcome to the beta: "Benvenuto al nuovo YouVersion.com!"
   selected: "Selezionato"
@@ -267,7 +268,7 @@ it:
       your information title: "Informazioni fornite da te"
       your information text: "Quando effettui la registrazione di un account YouVersion, o di un altro servizio o promozione LifeChurch.tv che richiede la registrazione, ti chiediamo i tuoi dati personali (ad esempio nome, indirizzo e-mail e password dell'account). Potremmo combinare i dati che invii tramite il tuo account con informazioni di altri servizi LifeChurch.tv o di terze parti per offrirti una migliore esperienza e migliorare la qualità dei nostri servizi. Alcuni servizi ti consentono di rifiutare la combinazione di tali informazioni."
       device id title: "Identificatore Univoco del Dispositivo e posizione GPS"
-      device id text: "do not translate"
+      device id text: "Quando accedi all'App Bibbia YouVersion, potremmo raccogliere il tuo Identificatore Univoco del Dispositivo ('UDID') e/o indirizzo IP e/o posizione GPS. Utilizziamo questi dati per offrirti un'esperienza personalizzata. Le informazioni vengono raccolte per determinare il numero complessivo di singoli dispositivi che utilizzano tutti o parte dei nostri servizi, monitorare l'utilizzo totale, analizzare dati e comunicare con te con maggiore efficacia. Potremmo combinare questi dati con informazioni di terze parti per offrirti una migliore esperienza e migliorare la qualità del nostro servizio. Non condividiamo alcun dato identificativo della persona con terze parti associate con il tuo UDID o posizione GPS senza la tua esplicita autorizzazione."
       cookies title: "do not translate"
       cookies text: "do not translate"
       log title: "Informazioni di Log"
@@ -654,6 +655,7 @@ it:
     408 explanation: "Puoi provare ancora  nel <un href='%='% ricarica_via??????la pagina.Siamo stati avvertiti ed affronteremo i problemi persistenti il più velocemente possibile."
     try again: "Riprova"
   versions:
+    filter: "Filtro Versioni..."
     courtesy of: "%{abbreviation} reso disponibile da %{publisher}"
     learn more: "Per Saperne di Più"
     index title: "Versioni disponibili"
