--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -2,7 +2,7 @@ km:
   now: "ឥឡូវ"
   celebrating 50MM: "អប​អរសាទការ​តម្លើងកម្មវិធី 50លាន​ដង!"
   link: "តំណ​ភ្ជាប់"
-  site search: "ស្វែង​រក​ YouVersion"
+  site search: "ស្វែង​រកតាមរយៈ​ YouVersion"
   auth error: "សូម​ទោស​! មាន​បញ្ហា​ជាមួយ​ ឈ្មោះ​ប្រើ​ប្រាស់​ និង​ ពាក្យ​សម្ងាត់​របស់​លោក​អ្នក។ សូម​ចុះ​ឈ្មោះ​ចូល នោះ YouVersion នឹង​បន្ត"
   download: "ដោន​ឡូដ"
   visit link: "ទស្សនាតំណរភ្ជាប់"
@@ -94,6 +94,7 @@ km:
   search placeholder: "ស្វែង​រក..."
   search: "ស្វែង​រក"
   book: "សៀវភៅ"
+  filter book: "ព្រះ​គម្ពីរ​ដែល​អ្នក​ស្វែងរក"
   try the beta: "សាកល្បង​បេតា"
   welcome to the beta: "សូម​ស្វាគមន៍​មក​rsion.com! ថ្មី"
   selected: "បានជ្រើសរើស"
@@ -654,6 +655,7 @@ km:
     408 explanation: "លោក​អ្នក​អាច​សាកល្បង​ម្ដង​ទៀត​ដោយ <a href= '%{reload_path}'>ទាញ​ឡើង​វិញ</a> លើ​ទំព័រ។ មាន​អ្នក​រាយ​ការណ៍​ប្រាប់​យើង ហើយ​យើង​នឹង​ដោះ​ស្រាយ​បញ្ហា​អោយ​ឆាប់​ជា​ទី​បំផុត។"
     try again: "សូម​ព្យាយាម​ម្ដង​ទៀត"
   versions:
+    filter: "ខ​គម្ពីរ​ដែល​អ្នក​ស្វែង​រក"
     courtesy of: "%{abbreviation} នាំ​មកជូនលោកអ្នកដោយ %{publisher}"
     learn more: "រៀន​ថែម​ទៀត"
     index title: "មាន​ជំនាន់​នេះ"
