--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -94,7 +94,7 @@ mn:
   search placeholder: "Хайх..."
   search: "Хайх"
   book: "Ном"
-  filter book: "Шүүгч Ном "
+  filter book: "Номууд Шүүх..."
   try the beta: "Beta ашиглаж үзэх"
   welcome to the beta: "Шинэ YouVersion.com-д тавтай морилно уу!"
   selected: "сонгосон"
@@ -180,6 +180,7 @@ mn:
     view in reader: "Уншигчийн дээр %{reference} Үзэх"
   users:
     unverified heading: "Бараг Дуслаа!"
+    unverified message: "Та бүтэн бүс данснд нэвтрэж байгаа юм шиг. Танд нэг л шат илүү байгаа: YouVersion-ээс авсан баталгаажуулах и-мэйлд байгаа хяналт линкнд дараарай. Олдсонгүй юу? Та спам и-мэйл шалгах уу эсвэл <a href='%{resend_path}'>баталгаахуулах и-мэйл дахин илгээх</a>."
     reset connection: "Уучлаарай, алдаа заалаа. Дахин шинээр холболт хийнэ үү. "
     settings: "Тохиргоо "
     no connection friends: "Одоогоор таны %{connection} найзууд YouVersion-д бүртгэгдээгүй байна."
@@ -266,19 +267,19 @@ mn:
       what we collect: "Бид ямар мэдээлэл цуглуулдаг болон түүнийгээ хэрхэн ашигладаг талаар"
       your information title: "Таны хангаж өгсөн мэдээлэл"
       your information text: "YouVersion болон LifeChurch.tv зүгээс зарим үйлчилгээ эсвэл урамшуулал авахын тулд та бүртгүүлсэн байх шаардлагатай байдаг, бүртгүүлэхэд бид таны хувийн мэдээлэлийг асуудаг (таны нэр, и-мэйл хаяг болон нууц үг гэх мэт). Илүү сайн үйлчилгээ үзүүлэх мөн үйлчилгээний чанараа дээшлүүлэхийн тулд бид таны бүртгүүлэхдээ оруулсан мэдээлэлийг, бусад LifeChurch.tv-н үйлчлэл болон гуравдагч талаас авсан мэдээлэлүүдтэй нийлүүлж болох юм. Зарим үйлчилгээнүүдэд, бид танд тэдгээр мэдээлэлийг нэгтгэхээс татгалзах боломжыг олгодог. "
-      device id title: "Oнцгой Төхөөрөмжийн ID"
+      device id title: "Oнцгой Төхөөрөмжийн ID бас GPS мэдээлэл."
       device id text: "Та YouVersion Библийн Аппликэйшнд холбогдоход, бид таны\nХэрэгслийн Онцгой ID (“UDID”) болон /эсвэл IP хаягийг авч магадгүй. Бид таны онцлогт тохируулсан үйлчилгээг үзүүлэх зорилгоор таны UDID-г ашигладаг. UDID мэдээлэл нь бидний зүгээс үзүүлж буй үйлчилгээ эсвэл үйлчилгээний хэсгүүдийг ашиглаж буй нийт төхөөрөмжүүдийн нийлбэр тоог тодорхойлох, өгөгдлүүдийг задлан шинжлэх болон тантай илүү үр нөлөөтэй харилцахын тулд цуглуулдаг. Бид таны UDID гуравдагч талаас хангасан мэдээлэлтэй нэгтгэж магадгүй бөгөөд энэ нь зөвхөн танд илүү сайн хэрэглээний дадал болон үйлчилгээгээ сайжруулахын тулд болно. Бид гуравдагч талтай таны мэдээллийг нэгтгэхдээ таныг тодорхойлох хувийн мэдээллийг хуваалцдаггүй болно. "
       cookies title: "LifeChurch.tv cookies"
       cookies text: "Та холбоосоор %{link} зочлоход, бид таны компьютерт хандсан нэг эсвэл нилээн хэдэн cookies илгээж болно, тэгсэнээр бид таны вэб хөтөчийг онцгойгоор таних болно. (Cookie гэдэг нь цуваа холбоо бүхий үсэг бүхий жижиг текстэн файл юм). Бидний зүгээс явуулж буй cookie-г хүлээн зөвшөөрсөнөөр таны хэрэглээний хүсэл болон тохиргоо хэрэглэх тоолонд тань хадгалагдсан хэвээр байна. Хэдийгээр ихэнх браузер cookie-г идэвхигүй байдлаар хүлээн авдаг ч, та өөрийн браузераа хүлээн авахгүй байхаар тохируулж болно. Зарим YouVersion-ий хэсгүүд болон үйлчилгээнүүд нь cookie-г ажиллагаагүй болгосноор зөв зохистой ажиллахгүй байж болох юм."
       log title: "Cистемийн тэмдэглэл "
       log text: "Та LifeChurch.tv үйлчилгээг ашиглахад эсвэл бидний вэбсайтуудын нэгээр зочлоход таны браузерийн илгээсэн мэдээлэлүүдийг бидний серверүүд шууд тэмдэглэж авдаг. Эдгээр серверийн тэмдэглэлүүд нь таны веб хандалт, Интернет Протокол хаяг, браузерийн төрөл, браузерийн хэл, таны хандалт хийсэн үеийн цаг болон өдөр мөн таны браузерийн онцлогыг тодорхойлон таньдаг нэг болон нилээн хэдэн cookie зэрэг мэдээлэлүүдийг багтаах боломжтой."
       communications title: "Хэрэглэгчийн харилцаа"
-      communications text: "Хувийн мэдээлэл эсвэл or via бүртгүүлсэн хүсэлт %{link}  нь бүлгийн удирдлагад илгээгдэх болно. Бүлгийн ахлагч мөн/ эсвэл бүлгийн нэг гишүүн л тэрхүү мэдээлэлтэй холбогдоно. Та емайл болон өөр бусад харилцаа холбооны зүйлсийг LifeChurch.tv- эзэмшлийн ямар ч вебсайтад илгээхэд, бид таны хүсэлтийг гүйцэтгэхийн тулд мөн өөрсдийн үйлчилгээг сайжруулахын тулд тэдгээр харилцаа холбоог хадгалан авдаг. "
+      communications text: "Хувийн мэдээлэл эсвэл or via бүртгүүлсэн хүсэлт <a href='www.youversion.com/live'>www.youversion.com/live  нь бүлгийн удирдлагад илгээгдэх болно. Бүлгийн ахлагч мөн/ эсвэл бүлгийн нэг гишүүн л тэрхүү мэдээлэлтэй холбогдоно. Та емайл болон өөр бусад харилцаа холбооны зүйлсийг LifeChurch.tv- эзэмшлийн ямар ч вебсайтад илгээхэд, бид таны хүсэлтийг гүйцэтгэхийн тулд мөн өөрсдийн үйлчилгээг сайжруулахын тулд тэдгээр харилцаа холбоог хадгалан авдаг. "
       third party title: "Гуравдагч этгээдийн сайтууд"
       third party text: "Энэхүү Хувийн Нууцлалын Бодлого нь зөвхөн LifeChurch.tv- н эзэмшдэг мөн ажиллуулдаг сайтууд болон апп л хамааралтай хэрэгждэг. LifeChurch.tv нь бидний өөр бусад вебсайтууд болон үйлчилгээнүүдэд холбогдсон бусад сайтуудыг хянаж чадахгүй. Эдгээр бусад сайтууд нь өөрсдийн cookies- ээ болон өөр файлуудаа таны компьютерт байрлуулж таны хувийн мэдээлэлүүдийг олж авч мөн баримтыг цуглуулж болно. Та өөрөө тэдний вебсайтаар зочилж Хувийн Нууцлалын Бодлоготой нь танилцах хэрэгтэй. "
       information use title: "Бид таны мэдээлэлийг хэрхэн ашигладаг вэ?"
       information use text: "Бүртгэл шаардлагатай тодорхой үйлчилгээнд та бүртгүүлэхэд, бид таниас хувийн мэдээлэлээ оруулахыг хүсдэг. Хэрэв LifeChurch.tv таны мэдээлэлийг анх цуглуулснаас өөр зорилгоор ашиглахыг хүсвэл, бид таниас ашиглаж болох зөвшөөрлийг авах болно. Бид Хувийн Нууцлалын Бодлогод тодорхойлогдсоноос өөр зорилгоор мөн/эсвэл онцгой үйлчилгээний мэдэгдэлд таны хувьд эмзэг мэдээлэлүүдийг, таны зөвшөөрөлгүйгээр цуглуулан мөн ашиглахгүй болно. Та бидний аливаа үйлчилгээнд өөрийн хувийн мэдээлэлээ өгөхөөс татгалзах эрхтэй, энэ тохиолдолд  LifeChurch.tv-н зүгээс тэдгээр үйлчилгээг танд хангаж өгөх боломжгүй. "
-      information security title: "Мэдээлэлийн Хамгаалал"
+      information security title: "Мэдээлэлийн Хамгаалалын Тухай"
       information security text: "LifeChurch.tv нь таны мэдээлэлд саад болсон зүйл, хаалт эсвэл эрх нь танигдаагүй үйл явц эсвэл зөвшөөрөгдөөгүй нэвтрэлт зэрэгээс хамгаалах зөв зохистой хамгаалах арга хэмжээг авдаг. Энэ нь бидний мэдээлэл цуглуулалтын дотоод эргэлт, хадгалалт болон аюулгүй хамгаалалтын арга хэмжээний үйл явц мөн хувийн мэдээлэл хамгаалах системийн хэсэгт нэврэхийг оролдсон зөвшөөрөлгүй нэврэлтийн эсрэг хамгаалах бодит хамгаалалын арга хэмжээ зэргийг багтаадаг.\nБид LifeChurch.tv- ажилчдад, гэрээ байгуулалгчид болон бидний үйлчлэлийг дээшлүүлэх, хөгжүүлэх болон явуулахад шаардлагатай мэдээлэлүүдийг мэдэх хэрэгтэй агентлагуудад хүртэл таны хувийн мэдээлэлд нэврэх эрхийг хязгаарладаг.\nЭдгээр хувь хүмүүс нь итгэлтэй байдлын шаардлагуудад захирагддаг бөгөөд хэрэв тэдгээр шаардлагуудыг хангаж чадаагүй тохиолдолд үүргийг цуцлалт болон гэмт хэргийн яллалт зэргийг багтаасан сахилгажуулалтыг хүлээлгэнэ."
       data integrity title: "Мэдээлэлийн Шударга Байдал"
       data integrity text: "LifeChurch.tv нь таны хувийн мэдээлэлийг Хувийн Нууцлалын Бодлогын дагуу зөвхөн цуглуулсан зорилгын төлөө ашиглах бөгөөд үйлчилгээний-онцлог хэрэгцээ гарсан тохиолдолд танд мэдэгддэг  болно. Бид зөвхөн үйлчилгээ үзүүлэх шаардлага болон сайжруулах зорилгоор л таны мэдээллийг цуглуулж хадгалан ашигладаг бөгөөд өөрсдийн мэдээлэлийн цуглуулалт, хадгалалт болон боловсруулах үйл явцын найдвартай байдлыг нягталдаг.  Бидний боловсруулж буй мэдээлэл нь үнэн зөв, гүйцэд болон одоогийн байдлаар байгаа гэдгийг баталгаажуулхын тулд бидний зүгээс бүхий л зохистой алхмуудыг хийдэг. Харин шаардлагатай үед хувийн мэдээлэлээ оруулах болон засварлан шинэчлэх тал дээр бид хэрэглэгчиддээ бүрэн найддаг. "
@@ -287,7 +288,7 @@ mn:
       enforcement title: "do not translate"
       enforcement text: "LifeChurch.tv нь тогтмол Хувийн Нууцлалын Бодлоготой холбоотой гомдол мэдээлэлийг эргэн хардаг. Хувийн Нууцлалтай холбоотой асуудалаар албан ёсны бичгэн гомдол хүлээн авахад, тухайн хүний гомдлыг харгалзан тус хэрэглэгчтэй холбоо барих нь бидний бодлого юм. LifeChurch.tv болон хувь хүний хооронд шийдэгдэх боломжгүй хувийн мэдээлэл шилжүүлэхтэй холбоотой гомдлыг шийдвэрлэхэд тухайн газрын мэдээлэл хамгаалалын удирдлага болон холбогдох удирдлагуудтай хамтран ажиллана. "
       questions title: "Асуултууд"
-      questions text: "Хувийн нууцлалын бодлоготой холбоотой асуултуудыг эндээс асууж болно: %{mailto_link}"
+      questions text: "Хувийн нууцлалын бодлоготой холбоотой асуултуудыг эндээс асууж болно: <a href='mailto:legal@youversion.com'>legal@youversion.com</a>"
     terms:
       title: "Хэрэглэх Журам"
       translation disclaimer: "Танд дөхөм болох үүднээс хэрэглээний нөхцөл нь орчуулагдсан болно; хэдий тийм боловч, LifeChurch.tv нь төлөөлөл болон орчуулгын үнэн зөв байдалд баталгаа өгч чадахгүй. Хэрэв Англи болон орчуулагдсан хувилбарын  хооронд ялгаа зөрөлдөөн гарсан тохиолдолд Англи хувилбар зохицуулах болно."
@@ -651,9 +652,10 @@ mn:
     404 explanation: "Харамсалтай нь, бид <em>%{requested_path}</em> хуудсыг олсонгүй. Хэрвээ та энэ хуудсыг байх ёстой гэж үзэж байвал, манай тусламжийн багт <a href='%{support_url}'>support team</a> хандаарай, эсвэл буцаад <a href='%{reader_path}'>уншигч</a> руу очоорой."
     404 message: "Уучлаарай, Таны хайж байгаа хуудас олдсонгүй."
     408 message: "Харамсалтай нь, бидний серверүүд хариулахгүй байна."
+    408 explanation: "Энэ талаар бидэнд мэдэгдсэн бөгөөд аль болох түргэн засах болно. Бид Таныг библиэ уншихад тань эргүүлээд аваачиж чадах нь уу харцгаая!"
     try again: "Дахин Оролдоно уу"
   versions:
-    filter: "Шүүгч Хувилбар "
+    filter: "Хувилбарууд Шүүх..."
     courtesy of: "%{abbreviation} танд %{publisher} -р дамжуулан аваачна"
     learn more: "Илүү Мэдэх"
     index title: "Унших Боломжтой Орчуулагууд"
