--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -189,7 +189,7 @@ ro:
     email address: "Adresă e-mail"
     user name: "Nume de utilizator"
     agreement: "Sunt de acord cu %{terms_link} YouVersion"
-    terms and conditions: "termeni și condiții"
+    terms and conditions: "termenii și condițiile"
     facebook sign up success: "Minunat! Te-ai autentificat cu Facebook. Alege un nume de utilizator și o parolă de YouVersion pentru a continua."
     register: "Înregistrare"
     thanks for registering: "Mulțumim pentru înregistrare!"
@@ -560,7 +560,7 @@ ro:
     relevancy copy: "În generațiile anterioare, accesul oamenilor la Biblie era foarte limitat. Astăzi lucrurile stau altfel. Totuși, mulți oameni care au acces la Biblie cred că mesajul ei nu se aplică pentru viața lor. În același timp, sunt alții care cred că există o legătură între Biblie și experiența lor de zi cu zi."
     information revolution: "Revoluția informației"
     information revolution copy: "În ultimii zece ani, Internetul a creat o revoluție care deschide posibilități nemaiîntâlnite. Cu abilitatea de a împărtăși, contribui, crea, transmite și comunica, este ușor să exprimăm cine suntem și ce credem cu restul lumii."
-    youversion copy: "Încă de la începutul său în 1996, scopul LifeChurch.tv a fost să conducă oamenii spre a deveni urmași devotați ai lui Hristos. În acest scop am căutat noi modalități pentru a ajuta oamenii să lege Biblia de viața lor de zi cu zi. Metodele noastre s-au schimbat de-a lungul anilor pe măsură ce am incorporat diverse tehnologii și strategii. Dar profund, scopul nostru rămâne concentrat asupra relevanței, străduințele noastre sunt să demonstrăm și să învățăm oamenii cum se relaționează Cuvântul lui Dumnezeu la fiecare, indiferent unde se află în viață."
+    youversion copy: "Încă de la începutul său în 1996, scopul LifeChurch.tv a fost să conducă oamenii spre a deveni urmași devotați ai lui Cristos. În acest scop am căutat noi modalități pentru a ajuta oamenii să lege Biblia de viața lor de zi cu zi. Metodele noastre s-au schimbat de-a lungul anilor pe măsură ce am incorporat diverse tehnologii și strategii. Dar profund, scopul nostru rămâne concentrat asupra relevanței, străduințele noastre sunt să demonstrăm și să învățăm oamenii cum se relaționează Cuvântul lui Dumnezeu la fiecare, indiferent unde se află în viață."
     youversion copy 2: "YouVersion reprezintă o nouă frontieră în eforturile LifeChurch.tv. Noi nu construim doar un instrument cu impact asupra lumii folosind tehnologii inovatoare, dar mai important, angajăm oamenii în relații cu Dumnezeu pe măsură ce ei descoperă relevanța pe care o are Biblia la viețile lor."
     partners title: "Parteneri în publicarea Bibliei"
     partners text: "Fără partenerii noștri generoși care publică Biblia, YouVersion pur și simplu nu ar fi în măsură să ofere comunității noastre din întreaga lume așa multe Biblii. Mulți ne-au întrebat cum pot mulțumi acestor susținători vitali ai misiunii YouVersion. Poți afla mai multe despre ei prin intermediul legăturilor de mai jos."
