--- a/config/locales/tl.yml
+++ b/config/locales/tl.yml
@@ -280,49 +280,49 @@ tl:
       information use title: "Paano namin gagamitin ang iyong mga impormasyon?"
       information use text: "Pag nagsign-up ka sa isang partikular na serbisyo at nangangailangan ng pagrehistro, hihingi kami mula sa iyo ng mga impormasyong pangpersonal. Pag nais ng LifeChurch.tv na gamitin ang mga impormasyong ito sa ibang paraan maliban sa aming pagkalap, hihingin namin ang iyong pahintulot bago namin ito gamitin. Hindi kami nangangalap o gumagamit ng mga sensitibong impormasyon sa ibang dahilan maliban lamang sa mga napapaloob sa Patakarang Pangpribado at/o sa mga spesipikong serbisyo na iyong pinapahintulutan. Maaari mong hindi isumite ang iyong mga personal na impormasyon sa anuman sa aming mga serbisyo, at gayundin maaaring hindi ka mabibigyan ng mga serbisyong ito mula sa LifeChurch.tv."
       information security title: "Paano namin pino-protektahan ang iyong impormasyon?"
-      information security text: " do not translate"
-      data integrity title: " do not translate"
-      data integrity text: "do not translate"
-      information access title: "do not translate"
-      information access text: "do not translate"
-      enforcement title: "do not translate"
-      enforcement text: "do not translate"
-      questions title: "do not translate"
-      questions text: "do not translate"
+      information security text: "Ang LifeChurch.tv ay hindi nagbabahagi ng iyong personal na impormasyon sa mga institusyong hindi kabilang sa LifeChurch.tv ng walang pahintulot mula sa iyo. Maaari lamang ibahagi ng LifeChurch.tv ang mga impormasyon tungkol sa iyo sa paniniwalang ang pagkuha, paggamit, pagtago o paghayag ng mga nasabing impormasyon ay lubhang kinakailangan upang (a) sumunod sa anumang batas, regulasyon, legal na proseso o hiling ng gobyerno, (b) isakatuparan ang kinakailangang Terms of Use, kasama ang pagiimbestiga ng posibleng pagsuway dito, (c) pag-suri, pagpigil, o kaya ay aksyunan ang palsipikasyon, security o technical issues, o (d) pangalagaan ang napipintong pinsala sa mga karapatan, ari-arian o kaligtasan ng LifeChurch.tv, mga gumagamit nito o ang publiko gaya ng sinasaad ng batas. Ang LifeChurch.tv ay gumagawa ng kaukulang aksyon upang maiwasan ang hindi awtorisadong pagkuha o pagbago, paghayag o pagsira ng impormasyon. Kasama ang aming pagsusuri ng aming nakalap na mga impormasyon, pagtatago at pamamaraan, gayun din ang pisikal na pag-iingat upang maiwasan ang hindi awtorisadong pagkuha sa mga sistema kung saan naroon ang mga personal na impormasyon. Maliban kung may maliwanag na pahintulot mula sa iyo, ang LifeChurch.tv ay may mahigpit na polisiya tungkol sa pagkuha ng mga personal na impormasyon ng mga empleyado nito, kontratista at mga ahente na kinakailangan ang mga detalye na ito upang paganahin, gawin o ayusin ang mga serbisyo ng LifeChurch.tv. Ang mag tauhang ito ay nasasakop ng confidentiality obligations at maaaring sakop din ng pagdidisiplina, kasama ang pagtanggal sa trabaho at paglilitis, kung hindi masunod ang mga pananagutang ito."
+      data integrity title: "Data Integrity"
+      data integrity text: "Ang LifeChurch.tv ay sinisigurong ang mga nakolektang impormasyon, pagtago at paggamit ng mga ito ay para lamang makalap, maitago at magamit ang mga personal na impormasyong kinakailangan upang makapagbigay o maiayos pa ang aming serbisyo. Isinasakatuparan namin ito sa pamamagitan ng mga makatuwirang pamamaraan upang ang mga nakalap na impormasyon ng aming mga tagasunod ay tama, kumpleto, at napapanahon, subalit kami ay umaasa sa aming mga tagasunod sa baguhin o itama ang mga personal na impormasyon na ito kung kinakailangan."
+      information access title: "Kinukuha at ina-update ang personal ng detalye"
+      information access text: "Sa iyong paggamit ng kahit anumang serbisyo ng LifeChurch.tv, sinisikap naming mabigyan kayo ng pamamaraan upang makita at maisaayos ang mga personal na impormasyon ninyo, kung ang mga ito ay kinakailangang itama dahil mali na o burahin ayon sa inyong kahilingan kung hindi rin ito isinasaad ng batas na dapat itago o kinakailangan para sa lehitimong paggamit namin. Hinihiling namin sa aming mga tagasunod na ipakilala ang sarili at ang mga impormasyong nais makuha, itama o tanggalin bago isakatuparan ang mga gawaing ito, at maaaring tanggihan namin ang mga hiling na hindi makatuwiran o paulit-ulit o systemic, nangangailangan ng lubhang malaking trabahong teknikal, maglalagay sa panganib ng kalagayan ng iba, o lubhang hindi maisasagawa (gaya halimbawa, ang hiling tungkol sa mga datos na nasa backup tapes), o kaya ay hindi kinakailangan. Sa mga pagkakataong pinahihintulutan namin ang pagtingin at pagsasaayos sa mga impormasyong ito, libre ang serbisyong ito, maliban na lamang kung mangangailangan ng lubhang malaking trabaho para sa amin. Ang ilan sa aming mga serbisyo ay may iba-ibang proseso upang makita, maitama o matanggal ang mga personal na impormasyon ng aming mga tagasunod."
+      enforcement title: "Pagpapatupad"
+      enforcement text: "Ang LifeChurch.tv ay palagiang sinusuri ang pagsunod nito sa Patakaran sa Privacy. Kapag nakatatanggap kami ng pormal na liham na nagsasaad ng reklamo hinggil dito, ang polisiya namin ay makipag-ugnayan sa aming tagasunod na naghain ng reklamo. Kami ay makikipagtulungan sa mga kinauukulang sangay ng gobyerno, kasama na ang lokal na namamahala ng proteksyon para sa mga datos, upang maresolba ang anumang reklamo tungkol sa paglipat ng personal na impormasyon na hindi maaaring malutas ng LifeChurch.tv at ng nasabing indibidwal."
+      questions title: "Mga Katanungan"
+      questions text: "Ang mga katanungan tungkol sa patakaran sa privacy ay maaaring ipabatid sa <a href='mailto:legal@youversion.com'>legal@youversion.com</a>"
     terms:
-      title: "do not translate"
+      title: "Mga Tuntunin sa Paggamit"
       translation disclaimer: "Ang salitaan ng paggamit ay sinalin upang madali sa iyo; subalit ang LifeChurch.tv ay walang pananagutan o pagkakatawan pagdating sa kawastuhan ng pagsalin.  Kung may pagkakaiba sa Ingles at sinaling wika, ang Ingles na salin ang mananaig. "
-      acceptance title: "do not translate"
-      acceptance text: "do not translate"
-      description title: "do not translate"
-      description text: "do not translate"
-      registration title: "do not translate"
-      registration text: "do not translate"
-      privacy title: "do not translate"
-      privacy text: "do not translate"
-      account title: "do not translate"
-      account text: "do not translate"
-      conduct title: "do not translate"
+      acceptance title: "Pagsang-ayon sa mga Alituntunin"
+      acceptance text: "Sa pag-click ng 'Sang-ayon ako,' sinasaad mo na nabasa at sinasang-ayunan mo ang MGA TUNTUNIN SA PAGGAMIT ng YouVersion. Ang LifeChurch.tv ay nagbibigay serbisyo sa pamamagitan ng Internet at ng World Wide Web (ang 'Web') sa anyo ng aplikasyong YouVersion at iba pang mga website gaya ng <a href-'http://youversion.com'>http://youversion.com</a> (o sa kabuuan, 'YouVersion'), ayon sa sumusunod na MGA TUNTUNIN SA PAGGAMIT. Ang LifeChurch.tv ay maaaring baguhin ang MGA TUNTUNIN SA PAGGAMIT paminsan-minsan, nang walang abiso, at ang pinakabagong salin ng MGA TUNTUNIN SA PAGGAMIT ay maaaring mabasa sa: <a href='http://youversion.com/terms'>http://youversion.com/terms</a>. Sa pag-gamit ng YouVersion, ikaw din ay pumapayag na mapasa ilalim sa anumang karagdagang alituntunin o patakaran na maaaring maipaskil paminsan-minsan sa website ng YouVersion. Ang lahat ng mga alituntunin o patakaran na ito ay nakasaad ayon sa pagkabanggit dito sa  MGA TUNTUNIN SA PAGGAMIT. Ang anumang paglabag sa MGA TUNTUNIN SA PAGGAMIT ay dapat iulat sa pamamagitan ng email sa <a href='mailto:legal@youversion.com'>legal@youversion.com</a>."
+      description title: "Paglalarawan ng Serbisyo"
+      description text: "Ang LifeChurch.tv ay nagbibigay sa mga Tagasunod nito ng mga iba't-ibang serbisyo sa pamamagitan ng YouVersion, kabilang ngunit hindi limitado sa mga sumusunod, panonood ng video online, paglalathala ng blog posts at mga komento, komentaryo, iba't-ibang mga gamit sa komunikasyon, forums, at isinapersonal na nilalaman, ng walang bayad mula sa mga tagasunod. Sa pag-gamit mo ng YouVersion, nauunawaan mong maaaring kaakibat nito ang pagkakaroon ng komunikasyon mula sa LifeChurch.tv, kabilang ngunit hindi limitado sa mga anunsiyo tungkol sa serbisyo, mensaheng pang-administratibo, at iba pang mga mensahe na ikaw ay indibidwal na umayon. Nauunawaan mo at sang-ayon ka na ikaw ang responsable sa pagkuha ng pamamaraan upang magkaroon ng Internet access sa YouVersion, na maaaring kasama ang aparato at bayad sa third-party (gaya ng bayad sa Internet service provider, bayad sa airtime, o iba pang bayarin kaugnay sa paglalathala at paghahatid ng mensahe)."
+      registration title: "Ang Iyong mga Pananagutan tungkol sa Pagpapatala"
+      registration text: "You acknowledge and agree to:<ul><li>provide true, accurate, current and complete information about yourself as prompted by YouVersion's registration form(s) (the 'Registration Data') and</li>\L<li>maintain and promptly update the Registration Data to keep it true, accurate, current and complete. If LifeChurch.tv suspects that such information is untrue, inaccurate, not current or incomplete, LifeChurch.tv has the right to suspend or terminate your account and refuse any and all current or future use of YouVersion (or any portion thereof). LifeChurch.tv is concerned about the safety and privacy of all its users, particularly children. For this reason, parents of children under the age of 13 who allow their children to access YouVersion must acknowledge that YouVersion is designed to appeal to a broad audience. Accordingly, as your child's legal guardian, it is your responsibility to determine whether YouVersion is appropriate for your child.</li></ul>"
+      privacy title: "Ang Patakaran sa Privacy ng YouVersion"
+      privacy text: "Ang mga impormasyon ukol sa pagpapatala at iba pang personal na bagay tungkol sa iyo ay nasasakop ng aming Patakaran sa Privacy, na matatagpuan sa <a href='http://youversion.com/privacy'>http://youversion.com/privacy</a>. Nauunawaan mo na sa paggamit mo ng YouVersion ay pumapayag kang makalap at magamit (gaya ng nakasaad sa Patakaran sa Privacy) ang mga impormasyong ito, kasama na ang paglipat ng mga impormasyong ito sa Estados Unidos at/o iba pang mga bansa para sa pagtatago, pag-proseso at paggamit ng <a href='http://LifeChurch.tv'>Lifechurch.tv</a>."
+      account title: "Member Account, Password and Security"
+      account text: "Kapag natapos na ang proseso ng pagpapatala sa YouVersion, makatatanggap ka ng password para sa nagawang account. Ikaw ang responsable sa pagpapanatili ng kaligtasan ng iyong password at account, at ganap ang iyong pananagutan tungkol sa lahat ng mga gawain na magaganap gamit ang iyong password o account. Sumasang-ayon ka na:\n<ul><li>dagling iaabiso ang LifeChurch.tv ng kahit anong paggamit ng iyong password o account na labag sa iyong pahintulot o kahit na anong paglabag sa seguridad, at </li><li>sisiguruhing lalabas mula sa iyong account pagkatapos ng bawat sesyon.</li></ul>"
+      conduct title: "Member Conduct"
       conduct text: "do not translate"
-      international title: "do not translate"
+      international title: "Pangkalahatang Uri ng mga Komunikasyon"
       international text: "do not translate"
-      content title: "do not translate"
+      content title: "Mga Nilalamang Isinumite o Ginawang Maaaring Makuha para Maisama sa Serbisyo"
       content text: "do not translate"
-      contributions title: "do not translate"
+      contributions title: "Mga Kontribusyon sa YouVersion"
       contributions text: "do not translate"
-      indemnity title: "do not translate"
+      indemnity title: "Bayad-danyos at Paglabas sa Pananagutan"
       indemnity text: "do not translate"
-      resale title: "do not translate"
-      resale text: "do not translate"
-      storage title: "do not translate"
+      resale title: "Walang Muling Pagbebenta ng Serbisyo"
+      resale text: "Sumasang-ayon kang hindi paramihin, ulitin, kopyahin, ibenta, ipalit, ibenta muli o kasangkapanin para sa anumang komersyal na gamit, ang kahit na anumang bahagi ng YouVersion (kasama ang iyong LifeChurch.tv ID), paggamit ng YouVersion, o pagkuha sa YouVersion."
+      storage title: "Pangkalahatang Kagawian Tungkol sa Paggamit at Pagtatago"
       storage text: "do not translate"
-      modifications title: "do not translate"
+      modifications title: "Pagbabago sa Serbisyo"
       modifications text: "do not translate"
-      termination title: "do not translate"
+      termination title: "Pagpuputol"
       termination text: "do not translate"
-      dealings title: "do not translate"
+      dealings title: "Pakikipag-ugnayan sa mga Ikatlong Partido"
       dealings text: "do not translate"
-      links title: "do not translate"
+      links title: "Mga Link"
       links text: "do not translate"
       rights title: "do not translate"
       rights text: "do not translate"
@@ -330,14 +330,14 @@ tl:
       limitation text: "do not translate"
       beneficiaries title: "do not translate"
       beneficiaries text: "do not translate"
-      notice title: "do not translate"
+      notice title: "Paalala"
       notice text: "do not translate"
-      trademark title: "do not translate"
+      trademark title: "Impormasyon tungkol sa Tatak Pangkalakal"
       trademark text: "do not translate"
       copyright title: "do not translate"
       copyright text: "do not translate"
-      general title: "do not translate"
-      general text: "do not translate"
+      general title: "Pangkalahatang Impormasyon"
+      general text: "Kabuuang Kasunduan. Ang MGA TUNTUNIN SA PAGGAMIT na ito ang bumubuo sa kabuuang kasunduan sa pagitan mo at ng LifeChurch.tv at sumasaklaw sa paggamit mo ng YouVersion, pinapalitan ang kahit anumang naunang kasunduan sa pagitan mo at LifeChurch.tv na kaugnay ang YouVersion. Maaari ka ring mapasailalim sa karagdagang alituntunin at kondisyon.<br><br>Pagpili ng Batas at Pagtitipon. Ang MGA TUNTUNIN SA PAGGAMIT at ang ugnayan sa pagitan mo at ng LifeChurch.tv ay masasaklawan ng mga batas ng Estado ng Oklahoma na walang pagtatangi sa pagkakaiba ng mga probisyon ng batas. Ikaw at ang LifeChurch.tv ay sumasang-ayon na mapasakot sa personal at ekslusibong hurisdiksyon ng mga korte na nasa probinsya ng Oklahoma County, Oklahoma.<br><br>Pagsusuko at Kakayahang Ihiwalay ng mga Tuntunin. Ang pagkabigo ng LifeChurch.tv na ipatupad o magpatupad ng kahit na anong karapatan o probisyon ng MGA TUNTUNIN SA PAGGAMIT ay hindi nangangahulugan ng pagpapaubay ng karapatan o probisyon na iyon. Kung ang anumang probisyon mula sa MGA TUNTUNIN SA PAGGAMIT ay mapagalaman ng korte na may maaasahang hurisdiksyon na maging walang bisa, ang mga partido ay gayunpamang sumasang-ayon na ang korte ay dapat pagsumikapan na bigyan ng bisa ang mga hangarin ng mga panig na sinasaad ng probisyon, at ang iba pang mga probisyon ng MGA TUNTUNIN SA PAGGAMIT na ito ay nananatiling gumagana.<br><br>Walang Karapatan sa Survivorship at Hindi Maaaring Ilipat. Sumasang-ayon ka ang ang iyong LifeChurch.tv account ay hindi maaaring maisalin sa iba, at ang anumang karapatan mo sa iyong LifeChurch.tv ID o nilalaman ng iyong account ay winawakasan sa iyong pagyao. Sa aming pagtanggap ng kopya ng sertipiko ng kamatayan, ang LifeChurch.tv ay maaaring magwakas sa iyong account at permanenteng burahin ang lahat ng nilalaman ng mga iyon.<br><br> Batas ng mga Limitasyon. Nauunawaan at natatanggap mo na ang anumang batas o kautusan ang lihis ang anumang paghahabol mula sa kaugnay na paggamit ng YouVersion o ng MGA TUNTUNIN SA PAGGAMIT at kinakailangang ihain sa loob ng isang (1) taon matapos kumuha ng claim o tuluyang mahadlangan.<br><br>Ang mga pamagat ng mga bahagi ng MGA TUNTUNIN SA PAGGAMIT ay para sa kaginhawahan lamang at walang legal o kasunduang mamamagitan."
     profile:
       first name: "Pangalan"
       last name: "Apelyido"
