--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -94,6 +94,7 @@ tr:
   search placeholder: "Ara..."
   search: "Ara"
   book: "Kitap"
+  filter book: "Kitapları Filtrele..."
   try the beta: "Beta sürümünü dene"
   welcome to the beta: "Yenilenmiş YouVersion.com'a hoşgeldiniz!"
   selected: "Seçili"
@@ -156,6 +157,7 @@ tr:
     see my likes: "Beğendiklerimin Hepsini Görüntüle"
     successfully deleted: "Not Silindi"
   ref:
+    loading secondary: "Ayetler İkincil Çeviride Yüklenmektedir..."
     clear verses: "Seçili Ayetleri Sıfırla"
     choose book and chapter: "Kitap ve Bölüm Seçimi"
     choose version: "Çeviri Seçimi"
@@ -177,6 +179,8 @@ tr:
     select another chapter: "Farklı Bir Bölümü Seçiniz"
     view in reader: "%{reference} Ayet(ler)ini Okuyucuda Görüntüle"
   users:
+    unverified heading: "Az Daha Bitti"
+    unverified message: "Kurulumu tamamen bitmemiş olan bir hesap ile giriş yapıyorsunuz gibi görünüyor. Hesabınızı kullanabilmeniz için yapmanız gereken bir şey var: YouVersion’dan aldığınız doğrulama e-Postasındaki linki tıklayın. e-Postayı bulamıyor musunuz? İstenmeyen Posta kutunuzu kontrol edin veya <a href='%{resend_path}'>doğrulama e-Postasını yeniden isteyin</a>."
     reset connection: "Bir hata oluştu, özür dileriz. Lütfen bu bağlantıyı kesip yeniden bağlanın."
     settings: "Ayarlar"
     no connection friends: "%{connection} sosyal ağındaki arkadaşlarınızın hiçbiri YouVersion'e kayıtlı değil."
@@ -195,6 +199,7 @@ tr:
     follow: "Takip et"
     follow user: "%{user} adlı kullanıcıyı takip et"
     unfollow: "Takip etme"
+    unfollow user: "%{user} Kullanıcının Takibini Bırak"
     following title: "Takip ettiklerim"
     user does not follow you: "%{user} seni takip etmiyor."
     recent activity: "Yeni Hareketler"
@@ -494,6 +499,7 @@ tr:
     subscribe successful: "Muhteşem! Bu Okuma Planına abonesiniz."
     which day in plan: "%{total} günden %{day}. gün"
     must start to complete: "Okuma ilerlemenizi kaydedebilmek için bu okuma planına başlayın."
+    invalid reference: "Özür dileriz. Bu okumada bulunan ayetlerin bazıları seçtiğiniz çeviride bulunmamaktadır. İlk olarak yukarıdan başka bir çeviriyi seçmeyi deneyiniz. Bu mesajı görmeye devam ederseniz, <a href='%{support_url}'>destek takımı</a> ile irtibata geçip, onlara sorunu bildiriniz."
   registration:
     with facebook: "Facebook Kimliğini Kullanarak Kaydol"
     benefits title: "Deneyimlerin Tamamına Erişin"
@@ -639,13 +645,25 @@ tr:
       highlights: "Vurgular:"
       'on': "Açık"
       'off': "Kapalı"
+      extras: "Ekstralar"
+      translation notes: "Dipnotlar"
+      cross references: "İç Göndermeler"
   app errors:
     404 explanation: "<em>%{requested_path}</em> adresine bağlı olan sayfayı bulamadık. Bu sayfanın mevcut olması gerektiği kanısındaysanız, lütfen <a href='%{support_url}'>destek takımı</a> ile irtibata geçiniz. Yoksa <a href='%{reader_path}'>okuyucuya</a> geri gidiniz."
     404 message: "Aradığınız sayfa bulunamıyor, özür dileriz."
+    408 message: "Sunucularımız dakik bir şekilde cevap veremedi. Özür dileriz."
+    408 explanation: "Sorun hakkında haberdar edildik. Sıkça olan sorunları olabildiğince çabuk bir şekilde çözmeye çalışıyoruz. Sizi şimdi Kutsal Kitap okumanıza geri göndermeye deneyeceğiz."
     try again: "Yeninde dene"
   versions:
+    filter: "Çevirileri Filtrele..."
+    courtesy of: "%{abbreviation} %{publisher} tarafından sunulmaktadır"
     learn more: "Daha Bilgi"
+    index title: "Mevcut Çeviriler"
     publisher widget title: "Yayıncı"
     visit publisher: "Yayımcının Web Sitesi"
     read title: "Çeviriyi Oku"
+    other versions: "Yayıncının Sunduğu Diğer Çeviriler"
+    number of versions field: "Toplam Çeviri:"
+    number of languages field: "Toplam Dil:"
+    language and count: "%{language_name} (%{language_count})"
     public domain: "Genel Alan"
